<resources>
    <string name="app_name">ListadoRecuperacionUD567</string>
    <string name="titulo_1">Listado de Productos</string>
    <string name="nombre_producto">nombre</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ver_favoritos">Ver Favoritos</string>
    <string name="button">Button</string>
    <string name="ir_a_favoritos">Ir a favoritos</string>
    <string name="precio">Precio</string>
    <string name="euro">€</string>
    <string name="favorito">favorito</string>
    <string name="no_favorito">No favorito</string>
    <string name="Favorito">Favorito</string>
    <string name="a_adir_producto">Añadir producto</string>
</resources>