<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="175dp"
        android:layout_height="400dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="22dp"
        android:fadingEdgeLength="5dp"
        app:cardBackgroundColor="#000000"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        app:cardMaxElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/nombre_producto"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_imagen"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="61dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="61dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="57dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="15dp"
                android:text="@string/precio"
                app:layout_constraintBottom_toTopOf="@+id/toggleButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="41dp"
                android:layout_marginEnd="46dp"
                android:layout_marginBottom="10dp"
                android:text="@string/favorito"
                android:textOff="@string/no_favorito"
                android:textOn="@string/Favorito"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="21dp"
                android:layout_height="17dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="44dp"
                android:layout_marginBottom="19dp"
                android:text="@string/euro"
                app:layout_constraintBottom_toTopOf="@+id/toggleButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_precio" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>